recursion.logo.koch.PentaKoch.scala.error
Erreur de compilation :
PentaKoch:5: error: not found: value mength
    pentaKoch(levels-1,mength*0.4)
                       ^PentaKoch:7: error: not found: value mength
    pentaKoch(levels-1,mength*0.4)
                       ^PentaKoch:9: error: not found: value mength
    pentaKoch(levels-1,mength*0.4)
                       ^PentaKoch:11: error: not found: value mength
    pentaKoch(levels-1,mength*0.4)
                       ^PentaKoch:13: error: not found: value mength
    pentaKoch(levels-1,mength*0.4)
                       ^PentaKoch:15: error: not found: value mength
    pentaKoch(levels-1,mength*0.4)
                       ^